<resources>
    <string name="app_name">Stoper</string>
    <string name="stopwatch_init_time">00:00</string>
    <string name="start_button_init_text">START</string>
    <string name="reset_button_text">RESET</string>
    <string name="next_button_text">NEXT</string>
    <string name="stop_button_init_text">STOP</string>
    <string name="lap_time_button_text">LAP</string>
    <string name="clear_button_text">CLEAR</string>
    <string name="next_label_text">Next:</string>
    <string name="milliseconds_initial_text">000</string>
    <string name="lap_label_text">Laps:</string>
</resources>
