<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="@drawable/rounded_button_red"
        android:fontFamily="sans-serif-condensed-light"
        android:onClick="onStartClick"
        android:text="@string/start_button_init_text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="@drawable/rounded_button_red"
        android:fontFamily="sans-serif-condensed-light"
        android:onClick="onStopClick"
        android:text="@string/stop_button_init_text"
        android:textSize="20sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/start_button"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_button_ecru"
        android:fontFamily="sans-serif-condensed-light"
        android:onClick="onResetButtonClick"
        android:text="@string/reset_button_text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/reset_button"
        android:background="@drawable/rounded_button_ecru"
        android:fontFamily="sans-serif-condensed-light"
        android:onClick="onClearButtonClick"
        android:text="@string/clear_button_text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/next_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_ecru"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/next_button_text"
        android:textSize="20sp"
        android:onClick="onNextButtonClick"
        android:layout_toStartOf="@+id/reset_button"
        android:layout_marginTop="65dp"/>

    <Button
        android:id="@+id/lap_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_ecru"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/lap_time_button_text"
        android:textSize="20sp"
        android:onClick="onLapButtonClick"
        android:layout_alignTop="@+id/next_time_button"
        android:layout_toEndOf="@+id/reset_button" />

</RelativeLayout>